# sammler-sdk

./: .gitignore  README.md
.github/workflows/: publish.yml  release-and-publish.yml  release.yml
examples/: README.md
examples/python/: example.py
examples/typescript/: example.ts  package.json  tsconfig.json
graphql/: operations.graphql
python/: README.md  pyproject.toml  verify.py
python/sammler/: __init__.py  client.py
typescript/: README.md  codegen.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts
